--- a/service/src/main/resources/quartz.properties
+++ b/service/src/main/resources/quartz.properties
@@ -3,19 +3,20 @@ org.quartz.scheduler.instanceName = VertxQuartzScheduler
 org.quartz.threadPool.threadCount = 3
 
 # set the scheduler's JobStore class (required)
-org.quartz.jobStore.class: net.joelinn.quartz.jobstore.RedisJobStore
+#org.quartz.jobStore.class: net.joelinn.quartz.jobstore.RedisJobStore
+org.quartz.jobStore.class = org.quartz.simpl.RAMJobStore
 
 # set the Redis host (required)
-org.quartz.jobStore.host: 192.168.0.36
+#org.quartz.jobStore.host: 192.168.0.36
 
 # set the redis port (optional, defaults to 6379)
-org.quartz.jobStore.port: 6379
+#org.quartz.jobStore.port: 6379
 
 # set the redis database (optional, defaults to 0)
 #org.quartz.jobStore.database: <your redis db>
 
 # set the Redis key prefix for all JobStore Redis keys (optional, defaults to none)
-org.quartz.jobStore.keyPrefix = vertx_job_
+#org.quartz.jobStore.keyPrefix = vertx_job_
 
 # set the Redis lock timeout in milliseconds (optional, defaults to 30000)
 #org.quartz.jobStore.lockTimeout = 30000
